--- a/Blog.Api/appsettings.json
+++ b/Blog.Api/appsettings.json
@@ -5,5 +5,10 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "JwtSettings": {
+    "Issuer": "auth.rockmoss.evrane.com",
+    "Audience": "rockmoss.evrane.com",
+    "IssuerKeyPath": "<ROCKMOSS_AUTH_JWT_ISSUER_KEY>"
+  }
 }
