--- a/Blog.Api/appsettings.json
+++ b/Blog.Api/appsettings.json
@@ -10,5 +10,20 @@
     "Issuer": "auth.rockmoss.evrane.com",
     "Audience": "rockmoss.evrane.com",
     "IssuerKeyPath": "<ROCKMOSS_AUTH_JWT_ISSUER_KEY>"
+  },
+  "AwsSettings": {
+    "AccessKeyId": "<ROCKMOSS_ROCKMOSS_AWS_S3_ACCESS_KEY_ID>",
+    "SecretAccessKey": "<ROCKMOSS_ROCKMOSS_AWS_S3_SECRET_ACCESS_KEY>",
+    "Region": "ap-northeast-1",
+    "S3": {
+      "BucketName": "evrane-rockmoss"
+    },
+    "Solutions": {
+      "ServerlessImageHandlerSolution": {
+        "SecretsManagerName": "RockMoss-SecretForUrlSignature",
+        "SecretKey": "SecretForUrlSignature",
+        "DistributionDomainName": "dy9thd0ewjmx0.cloudfront.net"
+      }
+    }
   }
 }
