--- a/Blog.Api/appsettings.json
+++ b/Blog.Api/appsettings.json
@@ -25,5 +25,25 @@
         "DistributionDomainName": "dy9thd0ewjmx0.cloudfront.net"
       }
     }
+  },
+  "ConnectionSettings": {
+    "Postgres": {
+      "Address": "<ROCKMOSS_ROCKMOSS_POSTGRES_ADDRESS>",
+      "Port": "<ROCKMOSS_ROCKMOSS_POSTGRES_PORT>",
+      "Username": "<ROCKMOSS_ROCKMOSS_POSTGRES_USERNAME>",
+      "Password": "<ROCKMOSS_ROCKMOSS_POSTGRES_PASSWORD>",
+      "Database": "<ROCKMOSS_ROCKMOSS_POSTGRES_DATABASE>"
+    },
+    "Redis": {
+      "Address": "<ROCKMOSS_ROCKMOSS_REDIS_ADDRESS",
+      "Port": "<ROCKMOSS_ROCKMOSS_REDIS_PORT>",
+      "Password": "<ROCKMOSS_ROCKMOSS_REDIS_PASSWORD>"
+    },
+    "RabbitMq": {
+      "Address": "<ROCKMOSS_ROCKMOSS_RABBITMQ_ADDRESS>",
+      "Port": "<ROCKMOSS_ROCKMOSS_RABBITMQ_PORT",
+      "Username": "<ROCKMOSS_ROCKMOSS_RABBITMQ_USERNAME>",
+      "Password": "<ROCKMOSS_ROCKMOSS_RABBITMQ_PASSWORD>"
+    }
   }
 }
