--- a/Blog.Admin/Blog.Admin.csproj
+++ b/Blog.Admin/Blog.Admin.csproj
@@ -67,6 +67,7 @@
     <ItemGroup>
       <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="7.0.1" />
       <PackageReference Include="Microsoft.AspNetCore.Mvc.Razor.RuntimeCompilation" Version="7.0.1" />
+      <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="7.0.1" />
     </ItemGroup>
 
     <ItemGroup>
