--- a/Blog.Api/appsettings.json
+++ b/Blog.Api/appsettings.json
@@ -21,10 +21,10 @@
     "AccessKeyId": "<AWS_S3_ACCESS_KEY_ID>",
     "SecretAccessKey": "<AWS_S3_SECRET_ACCESS_KEY>",
     "Region": "ap-northeast-1",
-    "S3": {
+    "S3Settings": {
       "BucketName": "evrane-rockmoss"
     },
-    "Solutions": {
+    "AwsSolutionSettings": {
       "ServerlessImageHandlerSolution": {
         "SecretsManagerName": "RockMoss-SecretForUrlSignature",
         "SecretKey": "SecretForUrlSignature",
