--- a/Blog.Web/.gitignore
+++ b/Blog.Web/.gitignore
@@ -456,3 +456,7 @@ Network Trash Folder
 Temporary Items
 .apdisk
 
+
+
+################################################################
+Migrations
