--- a/Blog.Web/Scripts/tailwindcss/package.json
+++ b/Blog.Web/Scripts/tailwindcss/package.json
@@ -4,11 +4,12 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "npx tailwindcss -i ./input.css -o ../../wwwroot/css/tailwindcss.css --watch"
+    "dev": "npx tailwindcss -i ./src/input.css -o ../../wwwroot/css/tailwindcss.css --watch"
   },
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@tailwindcss/forms": "^0.5.3",
     "tailwindcss": "^3.2.4"
   }
 }
