--- a/Blog.Web/appsettings.json
+++ b/Blog.Web/appsettings.json
@@ -5,5 +5,14 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "JwtSettings": {
+    "Issuer": "api.blog.evrane.com",
+    "Audience": "blog.evrane.com",
+    "IssuerKeyPath": "<JWT_ISSUER_KEY>"
+  },
+  "AllowedHosts": "*",
+  "ServiceSettings": {
+    "Blog": "http://localhost:4010"
+  },
+  "Domain": "<DOMAIN>"
 }
