--- a/Blog.Web/Blog.Web.csproj
+++ b/Blog.Web/Blog.Web.csproj
@@ -7,6 +7,7 @@
         <DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
     </PropertyGroup>
 
+    <PropertyGroup Condition=" '$(RunConfiguration)' == 'http' " />
     <ItemGroup>
       <_ContentIncludedByDefault Remove="wwwroot\lib\jquery\dist\jquery.js" />
       <_ContentIncludedByDefault Remove="wwwroot\lib\jquery\dist\jquery.min.js" />
