--- a/Blog.Web/Blog.Web.csproj
+++ b/Blog.Web/Blog.Web.csproj
@@ -36,6 +36,10 @@
           <Generator>ResXFileCodeGenerator</Generator>
           <LastGenOutput>CommonResources.Designer.cs</LastGenOutput>
         </EmbeddedResource>
+        <EmbeddedResource Update="Resources\Pages\Archive\Index.resx">
+          <Generator>ResXFileCodeGenerator</Generator>
+          <LastGenOutput>Index.Designer.cs</LastGenOutput>
+        </EmbeddedResource>
     </ItemGroup>
 
     <ItemGroup>
@@ -44,10 +48,15 @@
             <AutoGen>True</AutoGen>
             <DependentUpon>Index.resx</DependentUpon>
         </Compile>
-        <Compile Update="CommonResources.Designer.cs">
+        <Compile Update="Resources\CommonResources.Designer.cs">
           <DesignTime>True</DesignTime>
           <AutoGen>True</AutoGen>
           <DependentUpon>SharedResource.resx</DependentUpon>
+        </Compile>
+        <Compile Update="Resources\Pages\Archive\Index.Designer.cs">
+          <DesignTime>True</DesignTime>
+          <AutoGen>True</AutoGen>
+          <DependentUpon>IndexModel.resx</DependentUpon>
         </Compile>
     </ItemGroup>
 
