--- a/Blog.Admin/Blog.Admin.csproj
+++ b/Blog.Admin/Blog.Admin.csproj
@@ -59,9 +59,14 @@
         <_ContentIncludedByDefault Remove="wwwroot\lib\jquery-validation\dist\jquery.validate.js" />
         <_ContentIncludedByDefault Remove="wwwroot\lib\jquery-validation\dist\jquery.validate.min.js" />
         <_ContentIncludedByDefault Remove="wwwroot\lib\jquery-validation\LICENSE.md" />
+        <_ContentIncludedByDefault Remove="Areas\Account\Views\LogOut\Index.cshtml" />
     </ItemGroup>
 
     <ItemGroup>
+        <Folder Include="Areas\DomainManagement\Controllers" />
+        <Folder Include="Areas\DomainManagement\ViewModels" />
+        <Folder Include="Areas\DomainManagement\Views" />
+        <Folder Include="Resources\Controllers\Mvc" />
         <Folder Include="wwwroot\lib" />
         <Folder Include="Enums\" />
     </ItemGroup>
@@ -78,5 +83,20 @@
 
     <ItemGroup>
       <None Remove="Enums\" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <EmbeddedResource Update="Resources\CommonResources.resx">
+        <Generator>ResXFileCodeGenerator</Generator>
+        <LastGenOutput>CommonResources.Designer.cs</LastGenOutput>
+      </EmbeddedResource>
+    </ItemGroup>
+
+    <ItemGroup>
+      <Compile Update="Resources\CommonResources.Designer.cs">
+        <DesignTime>True</DesignTime>
+        <AutoGen>True</AutoGen>
+        <DependentUpon>CommonResources.resx</DependentUpon>
+      </Compile>
     </ItemGroup>
 </Project>
