--- a/deployments/docker-compose/Yiran.dev/docker-compose.yml
+++ b/deployments/docker-compose/Yiran.dev/docker-compose.yml
@@ -1,23 +1,22 @@
 version: "3.9"
 services:
-  
-  api-redis:
+  evrane-blog-api-redis:
     image: "redis:6-alpine"
-    command: "redis-server --save 60 1 --loglevel warning --requirepass ${ROCKMOSS_AUTH_REDIS_PASSWORD}"
+    command: "redis-server --save 60 1 --loglevel warning --requirepass ${EVRANE_BLOG_API_REDIS_PASSWORD}"
     ports:
       - "36479:6379"
     volumes:
-      - "api-redis-volume:/data"
-  api-postgres:
+      - "evrane-blog-api-redis-volume:/data"
+  evrane-blog-api-postgres:
     image: "postgres:14-alpine"
     ports:
       - "35532:5432"
     environment:
-      POSTGRES_USER: "${ROCKMOSS_AUTH_POSTGRES_USER}"
-      POSTGRES_PASSWORD: "${ROCKMOSS_AUTH_POSTGRES_PASSWORD}"
-      POSTGRES_DB: "${ROCKMOSS_AUTH_POSTGRES_DB}"
+      POSTGRES_USER: "${EVRANE_BLOG_API_POSTGRES_USER}"
+      POSTGRES_PASSWORD: "${EVRANE_BLOG_API_POSTGRES_PASSWORD}"
+      POSTGRES_DB: "${EVRANE_BLOG_API_POSTGRES_DB}"
     volumes:
-      - "api-postgres-volume:/var/lib/postgresql/data"
+      - "evrane-blog-api-postgres-volume:/var/lib/postgresql/data"
 volumes:
-  api-postgres-volume:
-  api-redis-volume:
+  evrane-blog-api-postgres-volume:
+  evrane-blog-api-redis-volume:
