--- a/deployments/docker-compose/Yiran.dev.server/docker-compose.yml
+++ b/deployments/docker-compose/Yiran.dev.server/docker-compose.yml
@@ -1,47 +1,49 @@
 version: "3.9"
 services:
-  evrane-blog-api-redis:
-    image: "redis:6-alpine"
-    command: "redis-server --save 60 1 --loglevel warning --requirepass ${EVRANE_BLOG_API_REDIS_PASSWORD}"
-    ports:
-      - "36479:6379" # 调试用
-    volumes:
-      - "evrane-blog-api-redis-volume:/data"
-  evrane-blog-api-postgres:
-    image: "postgres:14-alpine"
-    ports:
-      - "35532:5432" # 调试用
-    environment:
-      POSTGRES_USER: "${EVRANE_BLOG_API_POSTGRES_USER}"
-      POSTGRES_PASSWORD: "${EVRANE_BLOG_API_POSTGRES_PASSWORD}"
-      POSTGRES_DB: "${EVRANE_BLOG_API_POSTGRES_DB}"
-    volumes:
-      - "evrane-blog-api-postgres-volume:/var/lib/postgresql/data"
+  # API
   evrane-blog-api-server:
     image: "evrane-blog-api-server:latest"
     ports:
-      - "4010:80" # 调试用
+      - "30003:80" # 调试用
     environment:
-      JwtSettings__IssuerKeyPath: "${JWT_KEY_PATH}"
-      ConnectionSettings__Postgres__Address: "evrane-blog-api-postgres"
-      ConnectionSettings__Postgres__Port: "5432"
-      ConnectionSettings__Postgres__Username: "${EVRANE_BLOG_API_POSTGRES_USER}"
-      ConnectionSettings__Postgres__Password: "${EVRANE_BLOG_API_POSTGRES_PASSWORD}"
-      ConnectionSettings__Postgres__Database: "${EVRANE_BLOG_API_POSTGRES_DB}"
-      RsaSettings__PemFilePath__PrivateKeyFilePath: "${RSA_PRIVATE_KEY_PATH}"
-      RsaSettings__PemFilePath__PublicKeyFilePath: "${RSA_PUBLIC_KEY_PATH}"
+      "ASPNETCORE_URLS": "http://+:80"
+      "RsaSettings__PemFilePath__PrivateKeyFilePath": "${RSA_PRIVATE_KEY_PATH}"
+      "RsaSettings__PemFilePath__PublicKeyFilePath": "${RSA_PUBLIC_KEY_PATH}"
+      "JwtSettings__IssuerKeyPath": "${JWT_KEY_PATH}"
+      "JwtSettings__Issuer": "${JWT_ISSUER}"
+      "JwtSettings__Audience": "${JWT_AUDIENCE}"
+      "AwsSettings__AccessKeyId": "${AWS_ACCESS_KEY_ID}"
+      "AwsSettings__SecretAccessKey": "${AWS_SECRET_ACCESS_KEY}"
+      "AwsSettings__Region": "${AWS_REGION}"
+      "AwsSettings__S3Settings__BucketName": "${AWS_S3_BUCKET_NAME}"
+      "AwsSettings__AwsSolutionSettings__ServerlessImageHandlerSolutionConfiguration__SecretsManagerName": "${AWS_SOLUTION_SERVERLESS_IMAGE_HANDLER_SECRETS_MANAGER_NAME}"
+      "AwsSettings__AwsSolutionSettings__ServerlessImageHandlerSolutionConfiguration__SecretKey": "${AWS_SOLUTION_SERVERLESS_IMAGE_HANDLER_SECRET_KEY}"
+      "AwsSettings__AwsSolutionSettings__ServerlessImageHandlerSolutionConfiguration__DistributionDomainName": "${AWS_SOLUTION_SERVERLESS_IMAGE_HANDLER_DISTRIBUTION_DOMAIN_NAME}"
+      "ConnectionSettings__Postgres__Address": "${EVRANE_BLOG_API_POSTGRES_ADDR}"
+      "ConnectionSettings__Postgres__Port": "${EVRANE_BLOG_API_POSTGRES_PORT}"
+      "ConnectionSettings__Postgres__Username": "${EVRANE_BLOG_API_POSTGRES_USER}"
+      "ConnectionSettings__Postgres__Password": "${EVRANE_BLOG_API_POSTGRES_PASSWORD}"
+      "ConnectionSettings__Postgres__Database": "${EVRANE_BLOG_API_POSTGRES_DB}"
+  # 后台服务
   evrane-blog-admin-server:
     image: "evrane-blog-admin-server:latest"
     ports:
-      - "5003:80"
+      - "30004:80"
     environment:
+      "ASPNETCORE_URLS": "http://+:80"
       "JwtSettings__IssuerKeyPath": "${JWT_KEY_PATH}"
+      "JwtSettings__Issuer": "${JWT_ISSUER}"
+      "JwtSettings__Audience": "${JWT_AUDIENCE}"
+      "ServiceSettings__Blog": "${API_SERVER_ADDR}"
+  # Web服务
   evrane-blog-web-server:
     image: "evrane-blog-admin-server:latest"
     ports:
-      - "5003:80"
+      - "30005:80"
     environment:
+      "ASPNETCORE_URLS": "http://+:80"
       "JwtSettings__IssuerKeyPath": "${JWT_KEY_PATH}"
-volumes:
-  evrane-blog-api-postgres-volume:
-  evrane-blog-api-redis-volume:
+      "JwtSettings__Issuer": "${JWT_ISSUER}"
+      "JwtSettings__Audience": "${JWT_AUDIENCE}"
+      "ServiceSettings__Blog": "${API_SERVER_ADDR}"
+      "Domain": "${DEFAULT_DOMAIN}"
