--- a/deployments/docker-compose/Yiran.dev.server/docker-compose.yml
+++ b/deployments/docker-compose/Yiran.dev.server/docker-compose.yml
@@ -2,14 +2,14 @@ version: "3.9"
 services:
   # API
   evrane-blog-api-server:
-    image: "evrane-blog-api-server:latest"
+    image: "evrane-blog-api:latest"
     ports:
       - "30003:80" # 调试用
     environment:
       "ASPNETCORE_URLS": "http://+:80"
-      "RsaSettings__PemFilePath__PrivateKeyFilePath": "${RSA_PRIVATE_KEY_PATH}"
-      "RsaSettings__PemFilePath__PublicKeyFilePath": "${RSA_PUBLIC_KEY_PATH}"
-      "JwtSettings__IssuerKeyPath": "${JWT_KEY_PATH}"
+      "RsaSettings__PemFilePath__PrivateKeyFilePath": "/app/config/rsa-private-key.pem"
+      "RsaSettings__PemFilePath__PublicKeyFilePath": "/app/config/rsa-public-key.pem"
+      "JwtSettings__IssuerKeyPath": "/app/config/jwt-public-key.pem"
       "JwtSettings__Issuer": "${JWT_ISSUER}"
       "JwtSettings__Audience": "${JWT_AUDIENCE}"
       "AwsSettings__AccessKeyId": "${AWS_ACCESS_KEY_ID}"
@@ -24,26 +24,34 @@ services:
       "ConnectionSettings__Postgres__Username": "${EVRANE_BLOG_API_POSTGRES_USER}"
       "ConnectionSettings__Postgres__Password": "${EVRANE_BLOG_API_POSTGRES_PASSWORD}"
       "ConnectionSettings__Postgres__Database": "${EVRANE_BLOG_API_POSTGRES_DB}"
+    volumes:
+      - "${JWT_KEY_PATH}:/app/config/jwt-public-key.pem"
+      - "${RSA_PRIVATE_KEY_PATH}:/app/config/rsa-private-key.pem"
+      - "${RSA_PUBLIC_KEY_PATH}:/app/config/rsa-public-key.pem"
   # 后台服务
   evrane-blog-admin-server:
-    image: "evrane-blog-admin-server:latest"
+    image: "evrane-blog-admin:latest"
     ports:
       - "30004:80"
     environment:
       "ASPNETCORE_URLS": "http://+:80"
-      "JwtSettings__IssuerKeyPath": "${JWT_KEY_PATH}"
+      "JwtSettings__IssuerKeyPath": "/app/config/jwt-public-key.pem"
       "JwtSettings__Issuer": "${JWT_ISSUER}"
       "JwtSettings__Audience": "${JWT_AUDIENCE}"
-      "ServiceSettings__Blog": "${API_SERVER_ADDR}"
+      "ServiceSettings__Blog": "http://evrane-blog-api-server:80"
+    volumes:
+      - "${JWT_KEY_PATH}:/app/config/jwt-public-key.pem"
   # Web服务
   evrane-blog-web-server:
-    image: "evrane-blog-admin-server:latest"
+    image: "evrane-blog-web:latest"
     ports:
       - "30005:80"
     environment:
       "ASPNETCORE_URLS": "http://+:80"
-      "JwtSettings__IssuerKeyPath": "${JWT_KEY_PATH}"
+      "JwtSettings__IssuerKeyPath": "/app/config/jwt-public-key.pem"
       "JwtSettings__Issuer": "${JWT_ISSUER}"
       "JwtSettings__Audience": "${JWT_AUDIENCE}"
-      "ServiceSettings__Blog": "${API_SERVER_ADDR}"
+      "ServiceSettings__Blog": "http://evrane-blog-api-server:80"
       "Domain": "${DEFAULT_DOMAIN}"
+    volumes:
+      - "${JWT_KEY_PATH}:/app/config/jwt-public-key.pem"
