feat: add github action

--- a/Blog.Admin/appsettings.json
+++ b/Blog.Admin/appsettings.json
@@ -6,12 +6,12 @@
     }
   },
   "JwtSettings": {
-    "Issuer": "api.blog.evrane.com",
-    "Audience": "blog.evrane.com",
+    "Issuer": "<JWT_ISSUER>",
+    "Audience": "<JWT_AUDIENCE>",
     "IssuerKeyPath": "<JWT_ISSUER_KEY>"
   },
   "AllowedHosts": "*",
   "ServiceSettings": {
-    "Blog": "http://localhost:4010"
+    "Blog": "<SERVER_BLOG>"
   }
 }
