--- a/Blog.Api/appsettings.json
+++ b/Blog.Api/appsettings.json
@@ -13,22 +13,22 @@
     }
   },
   "JwtSettings": {
-    "Issuer": "api.blog.evrane.com",
-    "Audience": "blog.evrane.com",
+    "Issuer": "<JWT_ISSUER>",
+    "Audience": "<JWT_AUDIENCE>",
     "IssuerKeyPath": "<JWT_ISSUER_KEY>"
   },
   "AwsSettings": {
-    "AccessKeyId": "<AWS_S3_ACCESS_KEY_ID>",
-    "SecretAccessKey": "<AWS_S3_SECRET_ACCESS_KEY>",
-    "Region": "ap-northeast-1",
+    "AccessKeyId": "<AWS_ACCESS_KEY_ID>",
+    "SecretAccessKey": "<AWS_SECRET_ACCESS_KEY>",
+    "Region": "<AWS_REGION>",
     "S3Settings": {
-      "BucketName": "evrane-rockmoss"
+      "BucketName": "<AWS_S3_BUCKET_NAME>"
     },
     "AwsSolutionSettings": {
       "ServerlessImageHandlerSolutionConfiguration": {
-        "SecretsManagerName": "RockMoss-SecretForUrlSignature",
-        "SecretKey": "SecretForUrlSignature",
-        "DistributionDomainName": "dy9thd0ewjmx0.cloudfront.net"
+        "SecretsManagerName": "<AWS_SOLUTION_SERVERLESS_IMAGE_HANDLER_SECRET_MANAGER_NAME>",
+        "SecretKey": "<AWS_SOLUTION_SERVERLESS_IMAGE_HANDLER_SECRET_KEY>",
+        "DistributionDomainName": "<AWS_SOLUTION_SERVERLESS_IMAGE_HANDLER_DISTRIBUTION_DOMAIN_NAME>"
       }
     }
   },
