--- a/Blog.Web/Properties/launchSettings.json
+++ b/Blog.Web/Properties/launchSettings.json
@@ -6,7 +6,10 @@
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development",
         "ASPNETCORE_HOSTINGSTARTUPASSEMBLIES": "Microsoft.AspNetCore.Mvc.Razor.RuntimeCompilation",
-        "JwtSettings__IssuerKeyPath": "/Users/yiran/Developer/RockMoss/src/Auth/rsa-public-key.pem",
+        "JwtSettings__IssuerKeyPath": "/Users/yiran/yiran/project/github.com/Yiran/Blog.Api/rsa-public-key.pem",
+        "JwtSettings__Issuer": "api.blog.evrane.com",
+        "JwtSettings__Audience": "blog.evrane.com",
+        "ServiceSettings__Blog": "http://localhost:4010",
         "Domain": "Yiran"
       }
     }
