--- a/Blog.Web/appsettings.json
+++ b/Blog.Web/appsettings.json
@@ -6,13 +6,13 @@
     }
   },
   "JwtSettings": {
-    "Issuer": "api.blog.evrane.com",
-    "Audience": "blog.evrane.com",
+    "Issuer": "<JWT_ISSUER>",
+    "Audience": "<JWT_AUDIENCE>",
     "IssuerKeyPath": "<JWT_ISSUER_KEY>"
   },
   "AllowedHosts": "*",
   "ServiceSettings": {
-    "Blog": "http://localhost:4010"
+    "Blog": "<SERVER_BLOG>"
   },
   "Domain": "<DOMAIN>"
 }
