--- a/deployments/kubernetes/nginx-ingress.ingress.yml
+++ b/deployments/kubernetes/nginx-ingress.ingress.yml
@@ -5,6 +5,7 @@ metadata:
   annotations:
     kubernetes.io/ingress.class: "nginx"
     cert-manager.io/issuer: "letsencrypt-prod"
+    nginx.ingress.kubernetes.io/proxy-body-size: 10m
 spec:
   tls:
     - hosts:
