--- a/Blog.Admin/appsettings.json
+++ b/Blog.Admin/appsettings.json
@@ -7,8 +7,10 @@
   },
   "JwtSettings": {
     "Issuer": "<JWT_ISSUER>",
-    "Audience": "<JWT_AUDIENCE>",
-    "IssuerKeyPath": "<JWT_ISSUER_KEY>"
+    "Audience": "<JWT_AUDIENCE>"
+  },
+  "Host": {
+    "Type": "Proxied"
   },
   "AllowedHosts": "*",
   "ServiceSettings": {
