--- a/Blog.Api/appsettings.json
+++ b/Blog.Api/appsettings.json
@@ -14,8 +14,7 @@
   },
   "JwtSettings": {
     "Issuer": "<JWT_ISSUER>",
-    "Audience": "<JWT_AUDIENCE>",
-    "IssuerKeyPath": "<JWT_ISSUER_KEY>"
+    "Audience": "<JWT_AUDIENCE>"
   },
   "AwsSettings": {
     "AccessKeyId": "<AWS_ACCESS_KEY_ID>",
