--- a/Blog.Web/appsettings.json
+++ b/Blog.Web/appsettings.json
@@ -7,8 +7,7 @@
   },
   "JwtSettings": {
     "Issuer": "<JWT_ISSUER>",
-    "Audience": "<JWT_AUDIENCE>",
-    "IssuerKeyPath": "<JWT_ISSUER_KEY>"
+    "Audience": "<JWT_AUDIENCE>"
   },
   "AllowedHosts": "*",
   "ServiceSettings": {
