fix: 修复未执行UseForwardedHeaders的问题

--- a/deployments/docker-compose/evrane-blog/.env.example
+++ b/deployments/docker-compose/evrane-blog/.env.example
@@ -1,5 +1,4 @@
 EVRANE_BLOG_API_REDIS_ADDR=
-EVRANE_BLOG_API_REDIS_PORT=
 EVRANE_BLOG_API_REDIS_PASSWORD=
 
 EVRANE_BLOG_API_POSTGRES_ADDR=
@@ -15,6 +14,7 @@ ADMIN_OIDC_CLIENT_ID=
 ADMIN_OIDC_CLIENT_SECRET=
 
 WEB_1_DOMAIN=
+WEB_2_DOMAIN=
 
 AWS_ACCESS_KEY_ID=
 AWS_SECRET_ACCESS_KEY=
