--- a/deployments/docker-compose/evrane-blog/nginx.conf
+++ b/deployments/docker-compose/evrane-blog/nginx.conf
@@ -63,4 +63,25 @@ http {
             proxy_set_header X-Forwarded-Host $server_name;
         }
     }
+    
+    server {
+        listen 443 ssl;
+        server_name blog.pine-hamster.evrane.com;
+
+        ssl_certificate /etc/letsencrypt/live/admin.blog.evrane.com/fullchain.pem;
+        ssl_certificate_key /etc/letsencrypt/live/admin.blog.evrane.com/privkey.pem;
+
+        location / {
+            proxy_pass http://127.0.0.1:8024;
+            proxy_http_version 1.1;
+            proxy_set_header   Upgrade $http_upgrade;
+            proxy_set_header   Connection keep-alive;
+            proxy_set_header   Host $host;
+            proxy_cache_bypass $http_upgrade;
+            proxy_set_header   X-Real-IP $remote_addr;
+            proxy_set_header   X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header   X-Forwarded-Proto $scheme;
+            proxy_set_header X-Forwarded-Host $server_name;
+        }
+    }
 }
