--- a/deployments/docker-compose/evrane-blog-dev/nginx.conf
+++ b/deployments/docker-compose/evrane-blog-dev/nginx.conf
@@ -32,7 +32,7 @@ http {
         ssl_certificate_key /etc/nginx/cert/evrane-local.key;
     
         location / {
-            proxy_pass http://evrane-blog-admin-server:8000;
+            proxy_pass http://admin-server:8000;
             proxy_http_version 1.1;
             proxy_set_header   Upgrade $http_upgrade;
             proxy_set_header   Connection keep-alive;
@@ -54,7 +54,7 @@ http {
         ssl_certificate_key /etc/nginx/cert/evrane-local.key;
     
         location / {
-            proxy_pass http://evrane-blog-web-1-server:8000;
+            proxy_pass http://web-1-server:8000;
             proxy_http_version 1.1;
             proxy_set_header   Upgrade $http_upgrade;
             proxy_set_header   Connection keep-alive;
@@ -66,4 +66,26 @@ http {
             proxy_set_header   X-Forwarded-Host $server_name;
         }
     }
+    
+#     # 服务 Web (Yiran)
+#     server {
+#         listen 443 ssl;
+#         server_name blog.pine-hamster.local.evrane.com;
+#     
+#         ssl_certificate /etc/nginx/cert/evrane-local.crt;
+#         ssl_certificate_key /etc/nginx/cert/evrane-local.key;
+#     
+#         location / {
+#             proxy_pass http://web-2-server:8000;
+#             proxy_http_version 1.1;
+#             proxy_set_header   Upgrade $http_upgrade;
+#             proxy_set_header   Connection keep-alive;
+#             proxy_set_header   Host $host;
+#             proxy_cache_bypass $http_upgrade;
+#             proxy_set_header   X-Real-IP $remote_addr;
+#             proxy_set_header   X-Forwarded-For $proxy_add_x_forwarded_for;
+#             proxy_set_header   X-Forwarded-Proto $scheme;
+#             proxy_set_header   X-Forwarded-Host $server_name;
+#         }
+#     }
 }
